# crpc

./: .gitignore  CMakeLists.txt  README.md
include/: api.h  client.h  crpc.h  dbg.h  list.h  pkt.h  srv.h
include/crpc/: crpc.h
include/sys/: list.h
script/: async.sh  perf.sh  sync.sh
src/: CMakeLists.txt  api.c  api.h  client.c  client.h  dbg.c  dbg.h  pkt.c  pkt.h  srv.c  srv.h
test/: CMakeLists.txt  hello.h  hello_client.c  hello_client_async.c  hello_server.c  hello_server_async.c  perf_sync_client.c  perf_sync_server.c
