project(crpc C)
cmake_minimum_required(VERSION 2.8)
include_directories(${PROJECT_SOURCE_DIR}/include)
include_directories(${PROJECT_SOURCE_DIR}/include/sys)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/build/)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/build/)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/build/)
add_compile_options(-g -Wall -o3)
add_subdirectory(src)
add_subdirectory(test)

configure_file(script/async.sh ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/async.sh)
configure_file(script/sync.sh ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/sync.sh)
configure_file(script/perf.sh ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/perf.sh)
