aux_source_directory(${PROJECT_SOURCE_DIR}/test SRC)
add_executable(hellod "hello_server.c") 
add_executable(helloc "hello_client.c") 
add_executable(hellod_async "hello_server_async.c") 
add_executable(helloc_async "hello_client_async.c") 
add_executable(perfd_sync "perf_sync_server.c") 
add_executable(perfc_sync "perf_sync_client.c") 
link_directories(${LIBRARY_OUTPUT_PATH}) 
target_link_libraries(hellod crpc) 
target_link_libraries(helloc crpc) 
target_link_libraries(hellod_async crpc) 
target_link_libraries(helloc_async crpc) 
target_link_libraries(perfd_sync crpc) 
target_link_libraries(perfc_sync crpc) 

